syntax = "proto3";

package proto;

option go_package="study-grpc/proto";

message CreateOrderReq{
  int64 amount=1;
  CreateOrderUser user=2;
  repeated CreateOrderGoods goods=3;
}

message CreateOrderUser{
  int64 userId=1;
  string phone=2;
  string address=3;
  int64 areaId=4;
}

message CreateOrderGoods {
  string skuId=1;
  int32 number=2;
  int64 price=3;
}